--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>tic-tac-toe</title>
+    <title>TIC tac TOE // matchewbie</title>
 
     <link rel="stylesheet" href="style.css" />
     <!-- <link rel="icon" href="favicon.png" /> -->
