finishing work on ASCII

--- a/meow.html
+++ b/meow.html
@@ -15,135 +15,135 @@
         <div id="meow">
             <pre>
          ,         ,,
-        ,|\_,_. ,_y/|
+        ,|\_,_. ,_y/|.
         \|`/_ `Y _\`|/
-        (` (D)  (D) `)                     
+       &lt;(` (D)  (D) `)>                     
      -~.(~,~ ( Y ) ~.~).~-      
-      -/~.~`   ^   ~.,\~-
-     ,&lt;//_,/V//T\,\v_\>>,
-       &lt;/&lt;v/&lt;//v\\,\>\>}\
-        ,/&lt;,//|^|\v\V>,\)>\          
+      -/~.~` . ^ . ~.,\~-
+     ,&lt;//_,/V,\T/,\v_\>>,
+       &lt;/&lt;v/&lt;//v\\,\>\>}\.
+        ,/&lt;,//|,|\v\V>,\)~\          
          {\V\\|v|//,/}..\V}\~,
           ( &lt;,\Vv/> ).. .\\)v)
            { `&lt;v>, } , . \V\}v
             |V |' | T  .//v\V,
             {  :v } |. V//_C,\)_             /^,
             ) v| ,(u^uuuu     ~\-V~/z/^/v`^/vV\,>
-           uuuu^uuuu ````       `'`'`'`'`'`'``'`
+           úuuu^uuuù ````       `'`'`'`'`'`'``'`
            ```` ````</pre>
             <pre>
          ,         ,,
-        ,|\_,_. ,_y/|              
+        ,|\_,_. ,_y/|.              
         \|`/_ `Y _\`|/
-        (` (-)  (-) `)
+       &lt;(` (-)  (-) `)>
      -~.(~,~ ( Y ) ~.~).~-
-      -/~.~`   ^   ~.,\~-                   
-     ,&lt;//_,/V//T\,\v_\>>,
-       &lt;/&lt;v/&lt;//v\\,\>\>}\
-        ,/&lt;,//|^|\v\V>,\)>\
+      -/~.~` . ^ . ~.,\~-                   
+     ,&lt;//_,/V,\T/,\v_\>>,
+       &lt;/&lt;v/&lt;//v\\,\>\>}\.
+        ,/&lt;,//|,|\v\V>,\)~\
          {\V\\|v|//,/}..\V}\~,
           ( &lt;,\Vv/> ).. .\\)v)
            { `&lt;v>, } , . \V\}v     
             |V |' | T  .//v\V,
             {  :v } |. V//_C,\)_             /^,
             ) v| ,(u^uuuu     ~\-V~/z/^/v`^/vV\,>
-           uuuu^uuuu ````       `'`'`'`'`'`'``'`
+           úuuu^uuuù ````       `'`'`'`'`'`'``'`
            ```` ````</pre>
             <pre>
          ,         ,,
-        ,|\_,_. ,_y/|
+        ,|\_,_. ,_y/|.
         \|`/_ `Y _\`|/
-        (` (D)  (D) `)                           
+       &lt;(` (D)  (D) `)>
      -~.(~,~ ( Y ) ~.~).~-
-      -/~.~`   ^   ~.,\~-
-     ,&lt;//_,/V//T\,\v_\>>,   
-       &lt;/&lt;v/&lt;//v\\,\>\>}\
-        ,/&lt;,//|^|\v\V>,\)>\
+      -/~.~` . ^ . ~.,\~-
+     ,&lt;//_,/V,\T/,\v_\>>,   
+       &lt;/&lt;v/&lt;//v\\,\>\>}\.
+        ,/&lt;,//|,|\v\V>,\)~\
          {\V\\|v|//,/}..\V}\~,
           ( &lt;,\Vv/> ).. .\\)v)             &lt;,\>
            { `&lt;v>, } , . \V\}v             &lt;^/.> 
             |V |' | T  .//v\V,             /,/v
             {  :v } |. V//_C,\)_         &lt;)(|`
             ) v| ,(u^uuuu     ~\-V~/z/^//v`
-           uuuu^uuuu ````       `'`'`'`'`
+           úuuu^uuuù ````       `'`'`'`'`
            ```` ````</pre>
             <pre class="meow">
          ,         ,,
-        ,|\_,_. ,_y/|                    
+        ,|\_,_. ,_y/|.                    
         \|`/_ `Y _\`|/
-        (` (D)  (D) `)           
+       &lt;(` (D)  (D) `)>           
      -~.(~,~ ( Y ) ~.~).~-                       
-      -/~.~`   0   ~.,\~-
-     ,&lt;//_,/V//T\,\v_\>>,
-       &lt;/&lt;v/&lt;//v\\,\>\>}\
-        ,/&lt;,//|^|\v\V>,\)>\                
+      -/~.~` . 0 . ~.,\~-
+     ,&lt;//_,/V,\T/,\v_\>>,
+       &lt;/&lt;v/&lt;//v\\,\>\>}\.
+        ,/&lt;,//|,|\v\V>,\)~\                
          {\V\\|v|//,/}..\V}\~,
           ( &lt;,\Vv/> ).. .\\)v)
            { `&lt;v>, } , . \V\}v     
             |V |' | T  .//v\V,
             {  :v } |. V//_C,\)_             /^,
             ) v| ,(u^uuuu     ~\-V~/z/^/v`^/vV\,>
-           uuuu^uuuu ````       `'`'`'`'`'`'``'`
+           úuuu^uuuù ````       `'`'`'`'`'`'``'`
            ```` ````</pre>
             <pre>
          ,         ,,
-        ,|\_,_. ,_y/|                   
+        ,|\_,_. ,_y/|.                   
         \|`/_ `Y _\`|/
-        (` (D)  (D) `)  
+       &lt;(` (D)  (D) `)>
      -~.(~,~ ( Y ) ~.~).~-    
-      -/~.~`   ^   ~.,\~-
-     ,&lt;//_,/V//T\,\v_\>>,               
-       &lt;/&lt;v/&lt;//v\\,\>\>}\
-        ,/&lt;,//|^|\v\V>,\)>\
+      -/~.~` . ^ . ~.,\~-
+     ,&lt;//_,/V,\T/,\v_\>>,               
+       &lt;/&lt;v/&lt;//v\\,\>\>}\.
+        ,/&lt;,//|,|\v\V>,\)~\
          {\V\\|v|//,/}..\V}\~,       
           ( &lt;,\Vv/> ).. .\\)v)             &lt;,\>
            { `&lt;v>, } , . \V\}v             &lt;^/.> 
             |V |' | T  .//v\V,             /,/v
             {  :v } |. V//_C,\)_         &lt;)(|`
             ) v| ,(u^uuuu     ~\-V~/z/^//v`
-           uuuu^uuuu ````       `'`'`'`'`
+           úuuu^uuuù ````       `'`'`'`'`
            ```` ````
             </pre>
             <pre>
          ,         ,,
-        ,|\_,_. ,_y/|
+        ,|\_,_. ,_y/|.
         \|`/_ `Y _\`|/             
-        (` (-)  (-) `)
+       &lt;(` (-)  (-) `)>
      -~.(~,~ ( Y ) ~.~).~-
-      -/~.~`   ^   ~.,\~-
-     ,&lt;//_,/V//T\,\v_\>>,    
-       &lt;/&lt;v/&lt;//v\\,\>\>}\
-        ,/&lt;,//|^|\v\V>,\)>\
+      -/~.~` . ^ . ~.,\~-
+     ,&lt;//_,/V,\T/,\v_\>>,    
+       &lt;/&lt;v/&lt;//v\\,\>\>}\.
+        ,/&lt;,//|,|\v\V>,\)~\
          {\V\\|v|//,/}..\V}\~,                 
           ( &lt;,\Vv/> ).. .\\)v)
            { `&lt;v>, } , . \V\}v
             |V |' | T  .//v\V,
             {  :v } |. V//_C,\)_             /^,
             ) v| ,(u^uuuu     ~\-V~/z/^/v`^/vV\,>
-           uuuu^uuuu ````       `'`'`'`'`'`'``'`
+           úuuu^uuuù ````       `'`'`'`'`'`'``'`
            ```` ````</pre>
             <pre>
          ,         ,,
-        ,|\_,_. ,_y/|
+        ,|\_,_. ,_y/|.
         \|`/_ `Y _\`|/                           
-        (` (D)  (D) `)
+       &lt;(` (D)  (D) `)>
      -~.(~,~ ( Y ) ~.~).~-                
-      -/~.~`   ^   ~.,\~-
-     ,&lt;//_,/V//T\,\v_\>>,
-       &lt;/&lt;v/&lt;//v\\,\>\>}\
-        ,/&lt;,//|^|\v\V>,\)>\
+      -/~.~` . ^ . ~.,\~-
+     ,&lt;//_,/V,\T/,\v_\>>,
+       &lt;/&lt;v/&lt;//v\\,\>\>}\.
+        ,/&lt;,//|,|\v\V>,\)~\
          {\V\\|v|//,/}..\V}\~,       
           ( &lt;,\Vv/> ).. .\\)v)             &lt;,\>
            { `&lt;v>, } , . \V\}v             &lt;^/.> 
             |V |' | T  .//v\V,             /,/v
             {  :v } |. V//_C,\)_         &lt;)(|`
             ) v| ,(u^uuuu     ~\-V~/z/^//v`
-           uuuu^uuuu ````       `'`'`'`'`
+           úuuu^uuuù ````       `'`'`'`'`
            ```` ````
             </pre>
         </div>
         <script>
-            const _regex = /[\/)({}.u\\\|]/;
+            const _regex = /[\/)({}.úùu\\\|]/;
             const _amp = /[\&]/;
             const _ltgt = /[ltg;]/;
             const _lt = /[l]/;
