detail work on cat

--- a/meow.html
+++ b/meow.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
 
-    <title>TIC tac TOE // matchewbie</title>
+    <meta name="description" content="dedicated to my cat of 15 years">
+
+    <title>Thaddeus // matchewbie</title>
 
     <link rel="stylesheet" href="style.css" />
     <!-- <link rel="icon" href="favicon.png" /> -->
@@ -59,7 +61,7 @@
      ,&lt;//_,/V,\T/,\v_\>>,   
        &lt;/&lt;v/&lt;//v\\,\>\>}\.
         ,/&lt;,//|,|\v\V>,\)~\
-         {\V\\|v|//,/}..\V}\~,
+         {\V\\|v|//,/}..\V}\~,              ^.
           ( &lt;,\Vv/> ).. .\\)v)             &lt;,\>
            { `&lt;v>, } , . \V\}v             &lt;^/.> 
             |V |' | T  .//v\V,             /,/v
@@ -95,7 +97,7 @@
      ,&lt;//_,/V,\T/,\v_\>>,               
        &lt;/&lt;v/&lt;//v\\,\>\>}\.
         ,/&lt;,//|,|\v\V>,\)~\
-         {\V\\|v|//,/}..\V}\~,       
+         {\V\\|v|//,/}..\V}\~,              ^.
           ( &lt;,\Vv/> ).. .\\)v)             &lt;,\>
            { `&lt;v>, } , . \V\}v             &lt;^/.> 
             |V |' | T  .//v\V,             /,/v
@@ -132,7 +134,7 @@
      ,&lt;//_,/V,\T/,\v_\>>,
        &lt;/&lt;v/&lt;//v\\,\>\>}\.
         ,/&lt;,//|,|\v\V>,\)~\
-         {\V\\|v|//,/}..\V}\~,       
+         {\V\\|v|//,/}..\V}\~,              ^.
           ( &lt;,\Vv/> ).. .\\)v)             &lt;,\>
            { `&lt;v>, } , . \V\}v             &lt;^/.> 
             |V |' | T  .//v\V,             /,/v
