background gradient for ASCII animation

--- a/meow.html
+++ b/meow.html
@@ -13,7 +13,7 @@
     <!-- <link rel="icon" href="favicon.png" /> -->
   </head>
 
-  <body>
+  <body id="meow-body">
         <div id="meow">
             <pre>
          ,         ,,
