facial animation details

--- a/meow.html
+++ b/meow.html
@@ -7,7 +7,7 @@
 
     <meta name="description" content="dedicated to my cat of 15 years">
 
-    <title>Thaddeus // matchewbie</title>
+    <title>e-Thaddeus // matchewbie</title>
 
     <link rel="stylesheet" href="style.css" />
     <!-- <link rel="icon" href="favicon.png" /> -->
@@ -21,7 +21,7 @@
         \|`/_ `Y _\`|/
        &lt;(` (D)  (D) `)>                     
      -~.(~,~ ( Y ) ~.~).~-      
-      -/~.~` . ^ . ~.,\~-
+      -/~.~`   ^   ~.,\~-
      ,&lt;//_,/V,\T/,\v_\>>,
        &lt;/&lt;v/&lt;//v\\,\>\>}\.
         ,/&lt;,//|,|\v\V>,\)~\          
@@ -39,7 +39,7 @@
         \|`/_ `Y _\`|/
        &lt;(` (-)  (-) `)>
      -~.(~,~ ( Y ) ~.~).~-
-      -/~.~` . ^ . ~.,\~-                   
+      -/~.~` . = . ~.,\~-                   
      ,&lt;//_,/V,\T/,\v_\>>,
        &lt;/&lt;v/&lt;//v\\,\>\>}\.
         ,/&lt;,//|,|\v\V>,\)~\
@@ -57,7 +57,7 @@
         \|`/_ `Y _\`|/
        &lt;(` (D)  (D) `)>
      -~.(~,~ ( Y ) ~.~).~-
-      -/~.~` . ^ . ~.,\~-
+      -/~.~`   ^   ~.,\~-
      ,&lt;//_,/V,\T/,\v_\>>,   
        &lt;/&lt;v/&lt;//v\\,\>\>}\.
         ,/&lt;,//|,|\v\V>,\)~\
@@ -75,7 +75,7 @@
         \|`/_ `Y _\`|/
        &lt;(` (D)  (D) `)>           
      -~.(~,~ ( Y ) ~.~).~-                       
-      -/~.~` . 0 . ~.,\~-
+      -/~.~`  .0.  ~.,\~-
      ,&lt;//_,/V,\T/,\v_\>>,
        &lt;/&lt;v/&lt;//v\\,\>\>}\.
         ,/&lt;,//|,|\v\V>,\)~\                
@@ -93,7 +93,7 @@
         \|`/_ `Y _\`|/
        &lt;(` (D)  (D) `)>
      -~.(~,~ ( Y ) ~.~).~-    
-      -/~.~` . ^ . ~.,\~-
+      -/~.~`   ^   ~.,\~-
      ,&lt;//_,/V,\T/,\v_\>>,               
        &lt;/&lt;v/&lt;//v\\,\>\>}\.
         ,/&lt;,//|,|\v\V>,\)~\
@@ -112,7 +112,7 @@
         \|`/_ `Y _\`|/             
        &lt;(` (-)  (-) `)>
      -~.(~,~ ( Y ) ~.~).~-
-      -/~.~` . ^ . ~.,\~-
+      -/~.~`   ^   ~.,\~-
      ,&lt;//_,/V,\T/,\v_\>>,    
        &lt;/&lt;v/&lt;//v\\,\>\>}\.
         ,/&lt;,//|,|\v\V>,\)~\
@@ -130,7 +130,7 @@
         \|`/_ `Y _\`|/                           
        &lt;(` (D)  (D) `)>
      -~.(~,~ ( Y ) ~.~).~-                
-      -/~.~` . ^ . ~.,\~-
+      -/~.~`   ^   ~.,\~-
      ,&lt;//_,/V,\T/,\v_\>>,
        &lt;/&lt;v/&lt;//v\\,\>\>}\.
         ,/&lt;,//|,|\v\V>,\)~\
