create dome effect on ASCII backdrop

--- a/meow.html
+++ b/meow.html
@@ -144,6 +144,7 @@
            ```` ````
             </pre>
         </div>
+        <div id="horizon"></div>
         <script>
             const _regex = /[\/)({}.úùu\\\|]/;
             const _amp = /[\&]/;
