comment out unused colorization toggle

--- a/computer.html
+++ b/computer.html
@@ -145,7 +145,7 @@
             const _amp = /[\&]/;
             const _ltgt = /[ltg;]/;
             const _lt = /[l]/;
-            let _which = Math.floor(Math.random() * 2);  // invert colorization
+            // let _which = Math.floor(Math.random() * 2);  // invert colorization
             let group = document.querySelectorAll('pre');
             group.forEach(frame => {
                 let thaddeus = frame.innerHTML;
