added animated grass to cat ASCII

--- a/meow.html
+++ b/meow.html
@@ -29,9 +29,9 @@
           ( &lt;,\Vv/> ).. .\\)v)
            { `&lt;v>, } , . \V\}v
             |V |' | T  .//v\V,
-            {  :v } |. V//_C,\)_             /^,
-            ) v| ,(u^uuuu     ~\-V~/z/^/v`^/vV\,>
-           úuuu^uuuù ````       `'`'`'`'`'`'``'`
+    /  /    {  :v } |. V//_C,\)_             /^,
+  ///// /   ) v| ,(u^uuuu     ~\-V~/z/^/v`^/vV\,>
+|/||/||||  úuuu^uuuù ````       `'`'`'`'`'`'``'`
            ```` ````</pre>
             <pre>
          ,         ,,
@@ -47,9 +47,9 @@
           ( &lt;,\Vv/> ).. .\\)v)
            { `&lt;v>, } , . \V\}v     
             |V |' | T  .//v\V,
-            {  :v } |. V//_C,\)_             /^,
-            ) v| ,(u^uuuu     ~\-V~/z/^/v`^/vV\,>
-           úuuu^uuuù ````       `'`'`'`'`'`'``'`
+    _  _    {  :v } |. V//_C,\)_             /^,
+  _/__/ _   ) v| ,(u^uuuu     ~\-V~/z/^/v`^/vV\,>
+|/////|/|  úuuu^uuuù ````       `'`'`'`'`'`'``'`
            ```` ````</pre>
             <pre>
          ,         ,,
@@ -65,9 +65,9 @@
           ( &lt;,\Vv/> ).. .\\)v)             &lt;,\>
            { `&lt;v>, } , . \V\}v             &lt;^/.> 
             |V |' | T  .//v\V,             /,/v
-            {  :v } |. V//_C,\)_         &lt;)(|`
-            ) v| ,(u^uuuu     ~\-V~/z/^//v`
-           úuuu^uuuù ````       `'`'`'`'`
+    /  /    {  :v } |. V//_C,\)_         &lt;)(|`
+  ///// /   ) v| ,(u^uuuu     ~\-V~/z/^//v`
+|/|||||/|  úuuu^uuuù ````       `'`'`'`'`
            ```` ````</pre>
             <pre class="meow">
          ,         ,,
@@ -83,9 +83,9 @@
           ( &lt;,\Vv/> ).. .\\)v)
            { `&lt;v>, } , . \V\}v     
             |V |' | T  .//v\V,
-            {  :v } |. V//_C,\)_             /^,
-            ) v| ,(u^uuuu     ~\-V~/z/^/v`^/vV\,>
-           úuuu^uuuù ````       `'`'`'`'`'`'``'`
+   /  /     {  :v } |. V//_C,\)_             /^,
+  /|||  /   ) v| ,(u^uuuu     ~\-V~/z/^/v`^/vV\,>
+|||||||||  úuuu^uuuù ````       `'`'`'`'`'`'``'`
            ```` ````</pre>
             <pre>
          ,         ,,
@@ -101,9 +101,9 @@
           ( &lt;,\Vv/> ).. .\\)v)             &lt;,\>
            { `&lt;v>, } , . \V\}v             &lt;^/.> 
             |V |' | T  .//v\V,             /,/v
-            {  :v } |. V//_C,\)_         &lt;)(|`
-            ) v| ,(u^uuuu     ~\-V~/z/^//v`
-           úuuu^uuuù ````       `'`'`'`'`
+   / |      {  :v } |. V//_C,\)_         &lt;)(|`
+ |||||  /   ) v| ,(u^uuuu     ~\-V~/z/^//v`
+|||||||||  úuuu^uuuù ````       `'`'`'`'`
            ```` ````
             </pre>
             <pre>
@@ -120,9 +120,9 @@
           ( &lt;,\Vv/> ).. .\\)v)
            { `&lt;v>, } , . \V\}v
             |V |' | T  .//v\V,
-            {  :v } |. V//_C,\)_             /^,
-            ) v| ,(u^uuuu     ~\-V~/z/^/v`^/vV\,>
-           úuuu^uuuù ````       `'`'`'`'`'`'``'`
+  |  |      {  :v } |. V//_C,\)_             /^,
+ ||||| |    ) v| ,(u^uuuu     ~\-V~/z/^/v`^/vV\,>
+|||||||||  úuuu^uuuù ````       `'`'`'`'`'`'``'`
            ```` ````</pre>
             <pre>
          ,         ,,
@@ -138,9 +138,9 @@
           ( &lt;,\Vv/> ).. .\\)v)             &lt;,\>
            { `&lt;v>, } , . \V\}v             &lt;^/.> 
             |V |' | T  .//v\V,             /,/v
-            {  :v } |. V//_C,\)_         &lt;)(|`
-            ) v| ,(u^uuuu     ~\-V~/z/^//v`
-           úuuu^uuuù ````       `'`'`'`'`
+  |   /     {  :v } |. V//_C,\)_         &lt;)(|`
+  /| /  /   ) v| ,(u^uuuu     ~\-V~/z/^//v`
+|||||||||  úuuu^uuuù ````       `'`'`'`'`
            ```` ````
             </pre>
         </div>
