--- a/meow.html
+++ b/meow.html
@@ -15,7 +15,7 @@
 
   <body id="anim-body">
         <div id="meow">
-            <pre>
+            <pre class="active">
          ,         ,,
         ,|\_,_. ,_y/|.
         \|`/_ `y _\`|/
@@ -69,7 +69,7 @@
   ///// /   ) v| ,(u^uuuu     ~\-V~/z/^//v`
 |/|||||/|  úuuu^uuuù ````       `'`'`'`'`
            ```` ````</pre>
-            <pre class="meow">
+            <pre>
          ,         ,,
         ,|\_,_. ,_y/|.                    
         \|`/_ `y _\`|/
