--- a/meow.html
+++ b/meow.html
@@ -178,14 +178,8 @@
                     }
                 });
             });
-            setTimeout(() => {
-              let _meow = document.getElementById('meow');
-              _meow.style.opacity = '0';
-              setTimeout(() => {
-                _meow.innerHTML = '';
-              }, 15000);
-            }, 30000);
-            setInterval(() => {
+
+            let animateAscii = setInterval(() => {
                 let frame = document.querySelector('#meow .active');
                 let next = document.querySelector('#meow .active + pre');
 
@@ -195,6 +189,15 @@
                 next.classList.add('active');
                 frame.classList.remove('active');
             }, 1000);
+       
+            setTimeout(() => {
+              let _meow = document.getElementById('meow');
+              _meow.style.opacity = '0';
+              setTimeout(() => {
+                _meow.innerHTML = '';
+                clearInterval(animateAscii);
+              }, 15000);
+            }, 30000);
         </script>
   </body>
 </html>
