--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <div id ="device"> </div>
     <div id="container"></div>
     <script src="app.js"></script>
   </body>
