cleaned up code and rehauled UX a bit

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- <link rel="icon" href="favicon.png" /> -->
   </head>
 
-  <body>
-    <div id ="device"> </div>
+  <body class="app-bg">
+    <div id="device"> </div>
     <div id="container"></div>
     <script src="app.js"></script>
   </body>
